fix settimg avatar and fix add select prepre

--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -283,6 +283,7 @@
     padding: 5px 5px;
     position: relative;
     background-color: #FFFFFF;
+    border: 2px solid #E4F3F7;
 }
 
 //.avatar-tab-content li .avatar-ok {
