--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -28,6 +28,7 @@
             position: absolute;
             bottom: -5px;
             right: -10px;
+            cursor: pointer;
         }
     }
 
