--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -35,7 +35,7 @@
 							<span></span><i ng-click="pre()" class="icon-chevron-left"></i>
 						</div>
 						<div class="statistic-content">
-							<p>需要备课的课程总数：{{currentPrepare.nodeOmitNums}}，有备课夹章节：{{currentPrepare.nodeFinishedNums}}，备课夹：{{currentPrepare.prepareNums}}，使用资源：{{currentPrepare.resourceNums}}</p>
+							<p>需要备课的课程总数：{{currentPrepare.nodeOmitNums + currentPrepare.nodeFinishedNums}}，有备课夹章节：{{currentPrepare.nodeFinishedNums}}，备课夹：{{currentPrepare.prepareNums}}，使用资源：{{currentPrepare.resourceNums}}</p>
 							<div class="statistic-box">
 								<highchart config="chartConfig"></highchart>
 							</div>
