fix fallback src

--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -592,6 +592,7 @@
     font-weight: lighter;
     color: #3fbbcf;
     position: absolute;
-    left: -120px;
+    left: -70px;
     top: -12px;
+    text-indent: 0;
 }
