--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -9,7 +9,7 @@
     text-align: left;
     color: #666;
     font-size: 15px;
-    height: 650px;
+    min-height: 650px;
 }
 .upload-file-content, .upload-network-content{
     background-color: #fff;
