--- a/src/less/res.less
+++ b/src/less/res.less
@@ -137,14 +137,15 @@
   border: none;
   color:#333;
   padding-left: 5px;
+  margin-right: 8px;
 }
 .res-search-btn {
   width: 32px;
-  height: 30px;
+  height: 28px;
   background: #0094ce;
   display: inline-block;
   position: relative;
-  top: 9px;
+  top: 7px;
   cursor: pointer;
   right: 10px;
 }
