增加router跳转，目的 是修正闪退问题

--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -71,6 +71,14 @@
 			</div>
 			<div class="intro-details">{{VM.info.des}}</div>
 		</div>
+		<!--相关路径-->
+		<!--<div class="related-path">
+			<div class="related-banner">相关路径</div>
+			<div class="related-info">
+				<div class="path-item" ng-repeat=" list in navList">list.name</div>
+			</div>
+		</div>-->
+		
 	
 		<div ng-controller="resCommentCtrl" data-ng-include="'/coms/res-preview/views/comment.html'"></div>
 	
