--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -308,3 +308,27 @@
         width: 50%;
     }  
 }
+
+// 相关路径
+#preview-container {
+    .related-path{
+        margin-top: 20px;
+
+        .related-banner{
+            font-weight: bold;
+            color: #16aed2;
+            margin-bottom: 6px;
+        }
+        
+        .related-info{
+            border: 1px dashed #666;
+            padding: 10px
+        }
+        
+        .path-item{
+            color: #5ad4f3;
+            cursor: pointer;
+        }
+        
+    }
+}
