--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -328,6 +328,11 @@
         .path-item{
             color: #5ad4f3;
             cursor: pointer;
+            margin: 5px 0;
+        }
+        
+        .path-item:hover{
+            color: #41c9a9;
         }
         
     }
