--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -31,10 +31,10 @@
 				<li><a ui-sref="systemres" ng-class="{'onactive':isActive('systemres')}">资源库</a></li>
 				<!-- <li><a ui-sref="schoolres" ng-class="{'onactive':isActive('schoolres')}">校本资源</a></li>
 				<li><a ui-sref="areares" ng-class="{'onactive':isActive('areares')}">区本资源</a></li> -->
-				<!-- <li ng-show="navCtrl[0]"><a ng-click="goToSpace()">学生学习空间</a></li> -->
+				<li ng-show="navCtrl[0]"><a ng-click="goToSpace()">学生学习空间</a></li>
 				<!-- <li><a ui-sref="customres" ng-class="{'onactive':isActive('customres')}">资源定制</a></li> -->
-				<li ng-show="navCtrl[1]" class="nav-width-custom"><a ng-click="goToQuestionLibrary()">题库</a></li>
-				<li ng-show="navCtrl[2]"><a ng-click="goToSceneEnglish()">情景英语</a></li>
+				<li ng-show="navCtrl[1]"><a ng-click="goToSceneEnglish()">情景英语</a></li>
+				<li ng-show="navCtrl[2]" class="nav-width-custom"><a ng-click="goToQuestionLibrary()">题库</a></li>
 				<li class="shopping-cart nav-custom">
 					<a ng-click="goToPrepare()"><img src="assets/img/shopcart.png" />收藏夹</a>
 				</li>
