--- a/src/coms/layout/footer/footer.html
+++ b/src/coms/layout/footer/footer.html
@@ -1,5 +1,6 @@
 ﻿<div id="footer">
-	<table class="ng-scope" style="width:70%;border:0;margin-left:260px;">
+	<!-- <table class="ng-scope" style="width:70%;border:0;margin-left:260px;"> -->
+	<table class="ng-scope container headroom " style="width:1170px;border:0;">
 		<tr>
 			<td style="text-align:left; width:20%">
 				<p style="text-align:left; margin-left:10px;">中新金桥 北京（Beijing HQ）</p>
@@ -62,7 +63,7 @@
 			<td colspan='2' style="text-align:center; width:50%">
 				<p style="text-align:center">Copyright<sup>©</sup>2005-2015，All Rights Reserved
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					京ICP备 10003979</p>
+					京ICP备 10003979号-1</p>
 			</td>
 			<td style="text-align:left; width:25%">
 				<p style="text-align:left">&nbsp;&nbsp;&nbsp;&nbsp;</p>
