--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -9,10 +9,12 @@
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
-			
+
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span>{{ grade.name }}</span></li>
+					<li ng-repeat="grade in VM.grade track by $index"
+						ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">
+						<span>{{ grade.name }}</span></li>
 				</ul>
 			</div>
 		</div>
@@ -25,16 +27,19 @@
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
-			
+
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject.name }}</span></li>
+					<li ng-repeat="subject in VM.subject track by $index"
+						ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)">
+						<span>{{ subject.name }}</span></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="seperate-right" ng-show="!VM.noTreeData && (VM.currentVersionShow || VM.currentVersionTmpShow)"><i class="icon-angle-right"></i></div>
-	<div class="select-nav-item"  ng-show="!VM.noTreeData && (VM.currentVersionShow || VM.currentVersionTmpShow)">
+	<div class="seperate-right" ng-show="!VM.noTreeData && (VM.currentVersionShow || VM.currentVersionTmpShow)"><i
+			class="icon-angle-right"></i></div>
+	<div class="select-nav-item" ng-show="!VM.noTreeData && (VM.currentVersionShow || VM.currentVersionTmpShow)">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentVersion()">
 				<span class="select-current" href="">{{VM.currentVersion.name}}</span>
@@ -42,8 +47,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="seperate-right" ng-show="!VM.noTreeData && (VM.currentMaterialShow || VM.currentMaterialTmpShow)"><i class="icon-angle-right"></i></div>
-	<div class="select-nav-item"  ng-show="!VM.noTreeData && (VM.currentMaterialShow || VM.currentMaterialTmpShow)">
+	<div class="seperate-right" ng-show="!VM.noTreeData && (VM.currentMaterialShow || VM.currentMaterialTmpShow)"><i
+			class="icon-angle-right"></i></div>
+	<div class="select-nav-item" ng-show="!VM.noTreeData && (VM.currentMaterialShow || VM.currentMaterialTmpShow)">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentMaterial()">
 				<span class="select-current" href="">{{VM.currentMaterial.name}}</span>
@@ -51,49 +57,59 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!--<i class="icon-angle-right"></i>
 	<a class="select-tips">全部</a>-->
-	<div class="res-filter" ng-hide="isShowSearch">
-		<!--<label class="right-label">收起筛选</label>-->
-		<input class="res-search" type="search" placeholder="请输入搜索内容" ng-model="searchKeywords"/>
+	<!--<div class="res-filter" ng-hide="isShowSearch">-->
+	<!--<label class="right-label">收起筛选</label>-->
+	<!--<input class="res-search" type="search" placeholder="请输入搜索内容" ng-model="searchKeywords"/>
 		<span class="res-search-btn" ng-click="search()">
 			<i class="icon-search"></i>	   
 		</span>
-	</div>
+	</div>-->
 </div>
 
 <!--筛选主内容 -->
 <div class="res-navbody">
 	<div class="res-body-content res-grade" ng-hide="VM.currentHeader || !VM.isFirstLogin">
 		<span class="res-content-left">学段:</span>
-		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">{{ grade.name}}</span>
+		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index"
+			ng-class="VM.currentGradeSeclet[$index]?'selected':''"
+			ng-click="VM.selectGrade($index)">{{ grade.name}}</span>
 	</div>
 	<div class="clearfix"></div>
 	<div class="res-body-content res-subject" ng-hide="VM.currentHeader || !VM.isFirstLogin">
 		<div class="res-content-left">学科:</div>
-		<div class="res-subject-wrapper"> 
-			<span class="select-item res-subject-content" ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)">{{ subject.name }}</span>
+		<div class="res-subject-wrapper">
+			<span class="select-item res-subject-content" ng-repeat="subject in VM.subject track by $index"
+				ng-class="VM.currentSubjectSeclet[$index]?'selected':''"
+				ng-click="VM.selectSubject($index)">{{ subject.name }}</span>
 		</div>
 		<!--<span class="res-more">
 		   	<a>更多<i class="icon-angle-down"></i></a>
 		</span>-->
 	</div>
 	<div class="clearfix"></div>
-	<div class="res-body-content res-material-version" ng-show="VM.isFirstLogin" ng-hide="VM.noTreeData || VM.currentVersionShow || VM.version.length==0 || !VM.version || VM.currentVersionTmpShow">
+	<div class="res-body-content res-material-version" ng-show="VM.isFirstLogin"
+		ng-hide="VM.noTreeData || VM.currentVersionShow || VM.version.length==0 || !VM.version || VM.currentVersionTmpShow">
 		<div class="res-content-left">版本:</div>
-		<div  class="res-version-wrapper">
-			<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-class="VM.currentVersionSeclet[$index]?'selected':''"  ng-click="VM.selectVersion($index)">{{ v.name }}</span>
+		<div class="res-version-wrapper">
+			<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content"
+				ng-class="VM.currentVersionSeclet[$index]?'selected':''"
+				ng-click="VM.selectVersion($index)">{{ v.name }}</span>
 		</div>
 	</div>
 	<div class="clearfix"></div>
 
 	<!--<div class="res-body-content res-material-version" ng-hide="VM.currentMaterialShow || !VM.currentVersionShow">-->
-	<div class="res-body-content res-material-version" ng-hide="VM.noTreeData || !VM.material || VM.material.length==0 || VM.currentMaterialShow || VM.currentMaterialTmpShow">
+	<div class="res-body-content res-material-version"
+		ng-hide="VM.noTreeData || !VM.material || VM.material.length==0 || VM.currentMaterialShow || VM.currentMaterialTmpShow">
 		<div class="res-content-left">教材:</div>
-		<div  class="res-material-wrapper">
-			<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-class="VM.currentMaterialSeclet[$index]?'selected':''" ng-click="VM.selectMaterial($index)">{{ v.name }}</span>
-		</div>	
+		<div class="res-material-wrapper">
+			<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content"
+				ng-class="VM.currentMaterialSeclet[$index]?'selected':''"
+				ng-click="VM.selectMaterial($index)">{{ v.name }}</span>
+		</div>
 	</div>
 	<div class="clearfix"></div>
 	<div class="res-content-footer" ng-hide="VM.currentMaterialShow || VM.currentMaterialTmpShow">
